Fix spacing

--- a/assets/changelog.css
+++ b/assets/changelog.css
@@ -177,6 +177,7 @@ ul, ol {
 .release-changes > ul > li {
     list-style: none;
     margin-bottom: .3rem;
+    line-height: 1.8;
 }
 
 .release-changes > ul > li > ul {
